--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@ body {
 nav {
   display: grid;
   align-items: center;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: auto 600px;
   background: #B7C2C0;
   border-bottom: 1px #D8D8D8 solid;
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   position: sticky;
   top: 0;
@@ -40,6 +40,10 @@ a {
   padding-right: 50px;
 }
 
+#profile {
+  align-self: center;
+}
+
 #dropdown {
   display: none;
 }
@@ -49,6 +53,8 @@ a {
   grid-template-columns: 50% 50%;
   position: absolute;
   bottom: 0px;
+  margin: 0px;
+  height: 90vh;
 }
 
 #profile > img {
@@ -59,7 +65,9 @@ a {
   text-align: center;
   color: #F1F1F1;
   padding-right: 65px;
-  margin: auto 0;
+  align-self: center;
+  height: auto;
+  margin: 0;
 }
 
 h3 {
@@ -89,6 +97,196 @@ p {
   text-align: left;
 }
 
-#desc > h1 {
+/*#desc > h1 {
   margin-bottom: 100px;
+}*/
+
+ul {
+  list-style: none;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  padding: 0px;
+  position: absolute;
+  left: 5%;
+  line-height: 50px;
+}
+
+i {
+  color: #f1f1f1;
+  font-size: 3em;
+}
+
+@media (max-width: 1440px) {
+
+  ul {
+    display: grid;
+    text-align: center;
+    width: 70%;
+    position: relative;
+    margin: 40px auto -40px auto;
+    left: 0%;
+  }
+
+  i {
+    font-size: 5em;
+  }
+
+  h1 {
+    font-size: 84px;
+    line-height: 108px;
+  }
+}
+
+@media (max-width: 1340px) {
+  ul {
+    margin-top: 0px
+  }
+}
+
+@media (max-width: 1200px) {
+  h1 {
+    font-size: 72px;
+    line-height: 96px;
+    margin-bottom: 0px !important;
+  }
+
+  ul {
+    width: 60%;
+    margin-top: 0px;
+  }
+
+  i {
+    font-size: 4em;
+  }
+}
+
+@media (max-width: 1080px) {
+  h1 {
+    margin-top: 30px;
+    font-size: 60px;
+    line-height: 78px;
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  ul {
+    width: 50%;
+  }
+
+  i {
+    font-size: 3em;
+  }
+}
+
+@media (max-width: 1000px) {
+  h1 {
+    margin-top: 20px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 50px;
+    -webkit-text-stroke: 2px;
+    line-height: 70px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 860px) {
+  #drh {
+    font-size: 30px;
+    padding-left: 30px;
+  }
+
+  #dropdown {
+    display: block;
+    justify-self: right;
+    padding-right: 30px;
+  }
+
+  #nav-links {
+    display: none;
+  }
+
+  #tile1 {
+    grid-template-columns: 1fr;
+    position: relative;
+  }
+
+  #profile {
+    grid-row-start: 2;
+  }
+
+  #desc {
+    height: auto;
+    padding: 30px 25px 10px 25px;
+    margin-bottom: -80px;
+  }
+
+  ul {
+    display: none;
+  }
+
+  h1 {
+    font-size: 45px;
+    line-height: 70px;
+    -webkit-text-stroke: 2px;
+    margin-top: 5px;
+  }
+
+  h3 {
+    font-size: 22px;
+    line-height: 25px;
+    margin: 10px auto;
+  }
+
+  p {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+@media (max-width: 500px) {
+  #desc {
+    height: auto;
+    padding: 50px 25px 10px 25px;
+    margin-bottom: 0px;
+  }
+
+  h1 {
+    font-size: 36px;
+    line-height: 44px;
+    -webkit-text-stroke: 1.5px;
+    margin: 20px auto;
+  }
+
+  h3 {
+    font-size: 16px;
+    line-height: 19px;
+  }
+
+  p {
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  #profile > img {
+    grid-row-start: 2;
+    position: absolute;
+    top: 0px;
+  }
 }
